--- a/main.css
+++ b/main.css
@@ -1,8 +1,16 @@
-section {
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+#product-overview {
   background: #ff1b68;
 }
 
 h1 {
   color: #fff;
   font-family: 'Anton', sans-serif;
+}
+
+.section-title {
+  color: #2ddf5c;
 }
