--- a/main.css
+++ b/main.css
@@ -6,11 +6,15 @@ body {
   background: #ff1b68;
 }
 
-h1 {
+.section-title {
+  color: #2ddf5c;
+}
+
+#product-overview h1 {
   color: #fff;
   font-family: 'Anton', sans-serif;
 }
 
-.section-title {
-  color: #2ddf5c;
+h1 {
+  font-family: 'Anton', sans-serif;
 }
