--- a/main.css
+++ b/main.css
@@ -8,12 +8,10 @@ body {
 }
 
 #product-overview {
-  background: #ff1b68;
+  background: url('img/freedom.jpg');
   width: 100%;
-  height: 328px;
+  height: 528px;
   padding: 10px;
-  border: 5px solid black;
-  /* margin: 10px; */
 }
 
 .section-title {
@@ -25,6 +23,66 @@ body {
   font-family: 'Anton', sans-serif;
 }
 
-/* h1 {
-  font-family: 'Anton', sans-serif;
-} */
+.main-header {
+  width: 100%;
+  background-color: #2ddf5c;
+  padding: 8px 16px;
+}
+
+.main-header > div {
+  display: inline-block;
+  vertical-align: middle;  
+}
+
+.main-header__brand {
+  text-decoration: none;
+  font-weight: 700;
+  color: #0e4f1f;
+  font-size: 22px;
+}
+
+.main-nav {
+  display: inline-block;
+  text-align: right;
+  width: calc(100% - 74px);
+  vertical-align: middle;
+}
+
+.main-nav__items {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.main-nav__item {
+  display: inline-block;
+  margin: 0 16px;
+}
+
+.main-nav__item a {
+  text-decoration: none;
+  color: #0e4f1f;
+  font-weight: bold;
+  padding: 3px;
+}
+
+.main-nav__item a:hover,
+.main-nav__item a:active {
+  text-decoration: none;
+  color: #fff;
+  border-bottom: 5px solid white;  
+}
+
+.main-nav__item--cta a {
+  color: #fff;
+  background: #91284b;
+  padding: 8px 16px;
+  border-radius: 8px;
+}
+
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+  color: #ed115a;
+  background: #fff;
+  border-bottom: none;
+}
