--- a/main.css
+++ b/main.css
@@ -16,11 +16,22 @@ body {
 
 .section-title {
   color: #2ddf5c;
+  text-align: center;
 }
 
 #product-overview h1 {
   color: #fff;
   font-family: 'Anton', sans-serif;
+}
+
+.plan {
+  background: #dfffdc;
+  text-align: center;
+  padding: 16px;
+  margin: 8px;
+  display: inline-block;
+  width: 30%;
+  vertical-align: middle;
 }
 
 .main-header {
