--- a/main.css
+++ b/main.css
@@ -34,6 +34,67 @@ body {
   vertical-align: middle;
 }
 
+.plan--highlighted {
+  background: #19b84c;
+  color: #fff;
+  box-shadow: 2px 2px 2px 1px rgba(0,0,0,.2);
+}
+
+.plan__annotation {
+  background: #fff;
+  box-shadow: 2px 2px 2px 1px rgba(0,0,0,.2);
+  color: #19b84c;
+  padding: 8px;
+  border-radius: 5px;
+}
+
+.plan__features {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.plan__feature {
+  margin: 8px 0;
+}
+
+.plan__title {
+  color: #0e4f1f;
+}
+
+.plan__price {
+  color: #858585;
+}
+
+.plan--highlighted .plan__title {
+  color: #fff;
+}
+
+.plan--highlighted .plan__price {
+  color: #0e4f1f;
+}
+
+.button {
+  background: #0e4f1f;
+  color: #fff;
+  padding: 8px;
+  font: inherit;
+  border: 1.5px solid #0e4f1f;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.button:hover,
+.button:active {
+  background: #fff;
+  color: #0e4f1f;
+}
+
+.button:focus {
+  outline: none;
+}
+
 .main-header {
   width: 100%;
   background-color: #2ddf5c;
