--- a/main.css
+++ b/main.css
@@ -95,6 +95,46 @@ body {
   outline: none;
 }
 
+#key-features {
+  background: #ff1b68;
+  margin-top: 80px;
+  padding: 16px;
+}
+
+#key-features .section-title {
+  color: #fff;
+  margin: 32px;
+}
+
+.key-feature__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+.key-feature {
+  display: inline-block;
+  width: 30%;
+  vertical-align: top;
+}
+
+.key-feature__image {
+  background: #ffcede;
+  width: 128px;
+  height: 128px;
+  border: 2px solid #424242;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+.key-feature__description {
+  text-align: center;
+  font-weight: bold;
+  color: #fff;
+  font-size: 20px;
+}
+
 .main-header {
   width: 100%;
   background-color: #2ddf5c;
@@ -147,14 +187,14 @@ body {
 
 .main-nav__item--cta a {
   color: #fff;
-  background: #91284b;
+  background: #ff1b68;
   padding: 8px 16px;
   border-radius: 8px;
 }
 
 .main-nav__item--cta a:hover,
 .main-nav__item--cta a:active {
-  color: #ed115a;
+  color: #ff1b68;
   background: #fff;
   border-bottom: none;
 }
