--- a/packages/packages.css
+++ b/packages/packages.css
@@ -9,9 +9,55 @@ main {
   border-left: none;
 }
 
+.package:hover,
+.package:active {
+  box-shadow: 2px 2px 4px rgba(0,0,0,.3);
+  border-color: #ff5454 !important;
+}
+
 .package a {
   text-decoration: none;
   color: inherit;
   display: block;
   padding: 32px;
+}
+
+.package__subtitle {
+  color: #979797;
+}
+
+.package__info {
+  padding: 16px;
+  border: 1px solid #0e4f1f;
+  font-size: 20px;
+  color: #0e4f1f;
+  background: #fff;
+}
+
+.clearfix {
+  clear: both;
+}
+
+#plus {
+  background: rgba(213, 255, 220, 0.95);
+}
+
+#free {
+  background: rgba(234, 252, 237, 0.95);
+  float: right;
+  border-right: none;
+  border-left: 4px solid #0e4f1f;
+  text-align: right;
+}
+
+#premium {
+  background: rgba(14, 79, 31, 0.95);
+}
+
+#premium .package__title {
+  color: #fff;
+}
+
+#premium .package__subtitle {
+  color: #bbb;
 }
