--- a/main.css
+++ b/main.css
@@ -15,6 +15,12 @@
   font-family: 'Anton', sans-serif;
 }
 
+.plan-list {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+}
+
 .plan {
   background: #dfffdc;
   text-align: center;
