--- a/css-positioning/main.css
+++ b/css-positioning/main.css
@@ -3,7 +3,7 @@ html {
   padding: 15px;
   border: 5px solid white;
   margin: 15px;
-  height: 2000px;
+  height: 1000px;
 }
 
 body {
@@ -26,4 +26,13 @@ body {
   padding: 10px;
   border: 5px solid black;
   margin: 10px;
+}
+
+.parent .child-1 {
+  position: fixed;
+  box-sizing: border-box;
+  width: 100%;
+  top: 0;
+  left: 0;
+  margin: 0;
 }
