--- a/css-positioning/main.css
+++ b/css-positioning/main.css
@@ -4,6 +4,7 @@ html {
   border: 5px solid white;
   margin: 15px;
   height: 1000px;
+  /* overflow: hidden;   */
 }
 
 body {
@@ -11,6 +12,7 @@ body {
   padding: 20px;
   border: 5px solid black;
   margin: 0;
+  /* overflow: hidden; */
 }
 
 .parent {
@@ -18,6 +20,9 @@ body {
   padding: 20px;
   border: 5px solid black;
   margin: 0;
+  /* overflow: hidden; */
+  /* position: relative; */
+  /* top: 200px; */
 }
 
 .parent div {
@@ -28,11 +33,17 @@ body {
   margin: 10px;
 }
 
-.parent .child-1 {
+/* .parent .child-1 {
   position: fixed;
   box-sizing: border-box;
   width: 100%;
   top: 0;
   left: 0;
   margin: 0;
-}
+} */
+
+/* .parent .child-1 {
+  position: relative;
+  top: 190px;
+  left: 50px;
+} */
