--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@
   width: 100%;
   height: 528px;
   padding: 10px;
+  position: relative;
+  margin-top: 43px;  
 }
 
 .section-title {
@@ -13,6 +15,9 @@
 #product-overview h1 {
   color: #fff;
   font-family: 'Anton', sans-serif;
+  position: absolute;
+  left: 5%;
+  bottom: 3%;
 }
 
 .plan-list {
