--- a/packages/packages.css
+++ b/packages/packages.css
@@ -16,6 +16,7 @@ main {
   border: 4px solid #0e4f1f;
   border-left: none;
   position: relative;
+  /* z-index: 1; */
 }
 
 .package:hover,
@@ -40,6 +41,7 @@ main {
   color: #fff;
   background: #ff5454;
   padding: 8px;
+  /* z-index: 10; */
 }
 
 .package__subtitle {
