--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 #product-overview {
-  background: url('img/freedom.jpg') left 10% bottom 20% / cover no-repeat border-box;
+  background: linear-gradient(to top, rgba(80, 68, 18, .6) 10%, transparent), url('img/freedom.jpg') left 10% bottom 20% / cover no-repeat border-box, #ff1b68;
+  /* background-image: linear-gradient(180deg, red 60%, blue 68%, yellowgreen 68%); */
+  /* background-image: radial-gradient(ellipse farthest-side at 20% 50%, red, blue, yellowgreen); */
   width: 100%;
   height: 528px;
   padding: 10px;
