--- a/main.css
+++ b/main.css
@@ -1,12 +1,12 @@
 #product-overview {
-  background: linear-gradient(to top, rgba(80, 68, 18, .6) 10%, transparent), url('img/freedom.jpg') left 10% bottom 20% / cover no-repeat border-box, #ff1b68;
+  background: linear-gradient(to top, rgba(80, 68, 18, .6) 10%, transparent), url('img/freedom.jpg') center / cover no-repeat border-box, #ff1b68;
   /* background-image: linear-gradient(180deg, red 60%, blue 68%, yellowgreen 68%); */
   /* background-image: radial-gradient(ellipse farthest-side at 20% 50%, red, blue, yellowgreen); */
   width: 100%;
   height: 528px;
-  padding: 10px;
+  padding: 0.625rem;
   position: relative;
-  margin-top: 43px;
+  margin-top: 2.6875rem;
 }
 
 .section-title {
@@ -31,8 +31,8 @@
 .plan {
   background: #dfffdc;
   text-align: center;
-  padding: 16px;
-  margin: 8px;
+  padding: 1rem;
+  margin: 0.5rem;
   display: inline-block;
   width: 30%;
   vertical-align: middle;
@@ -48,7 +48,7 @@
   background: #fff;
   box-shadow: 2px 2px 2px 1px rgba(0,0,0,.2);
   color: #19b84c;
-  padding: 8px;
+  padding: 0.5rem;
   border-radius: 5px;
 }
 
@@ -59,7 +59,7 @@
 }
 
 .plan__feature {
-  margin: 8px 0;
+  margin: 0.5rem 0;
 }
 
 .plan__title {
@@ -80,13 +80,13 @@
 
 #key-features {
   background: #ff1b68;
-  margin-top: 80px;
-  padding: 16px;
+  margin-top: 5rem;
+  padding: 1rem;
 }
 
 #key-features .section-title {
   color: #fff;
-  margin: 32px;
+  margin: 2rem;
 }
 
 .key-feature__list {
@@ -104,17 +104,17 @@
 
 .key-feature__image {
   background: #ffcede;
-  width: 128px;
-  height: 128px;
+  width: 8rem;
+  height: 8rem;
   border: 2px solid #424242;
   border-radius: 50%;
   margin: 0 auto;
-  padding: 25px;
+  padding: 1.5625rem;
 }
 
 .key-feature__description {
   text-align: center;
   font-weight: bold;
   color: #fff;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
