--- a/shared.css
+++ b/shared.css
@@ -2,9 +2,24 @@
   box-sizing: border-box;
 }
 
+html {
+  /* height: 100%; */
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
+  /* height: 100%;   */
+}
+
+.backdrop {
+  position: fixed;
+  display: none;
+  z-index: 100;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,.5);
 }
 
 .main-header {
