--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 #product-overview {
-  background: linear-gradient(to top, rgba(80, 68, 18, .6) 10%, transparent), url('img/freedom.jpg') center / cover no-repeat border-box, #ff1b68;
+  background: linear-gradient(to top, rgba(80, 68, 18, .6) 10%, transparent), url('img/freedom.jpg') left 20% top 20% / cover no-repeat border-box, #ff1b68;
   /* background-image: linear-gradient(180deg, red 60%, blue 68%, yellowgreen 68%); */
   /* background-image: radial-gradient(ellipse farthest-side at 20% 50%, red, blue, yellowgreen); */
-  width: 100%;
-  height: 528px;
+  width: 100vw;
+  height: 44vh;
   padding: 0.625rem;
   position: relative;
   margin-top: 2.6875rem;
