--- a/shared.css
+++ b/shared.css
@@ -17,8 +17,9 @@ body {
   display: none;
   z-index: 100;
   top: 0;
-  width: 100%;
-  height: 100%;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0,0,0,.5);
 }
 
