--- a/shared.css
+++ b/shared.css
@@ -26,7 +26,6 @@ body {
 .modal {
   position: fixed;
   display: none;
-  opacity: 0;
   z-index: 200;
   top: 20%;
   left: 30%;
@@ -87,6 +86,28 @@ body {
   vertical-align: middle;  
 }
 
+.toggle-button {
+  width: 3rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding-top: 0;
+  padding-bottom: 0;
+  vertical-align: middle;
+}
+
+.toggle-button:focus {
+  outline: none;
+}
+
+.toggle-button__bar {
+  width: 100%;
+  height: 0.2rem;
+  background: #000;
+  display: block;
+  margin: 0.6rem 0;
+}
+
 .main-header__brand {
   text-decoration: none;
   font-weight: 700;
@@ -95,6 +116,7 @@ body {
   height: 23px;
   width: 23px;
   display: inline-block;
+  vertical-align: middle;
 }
 
 .main-header__brand img {
@@ -104,7 +126,7 @@ body {
 .main-nav {
   display: inline-block;
   text-align: right;
-  width: calc(100% - 74px);
+  width: calc(100% - 112px);
   vertical-align: middle;
 }
 
@@ -119,7 +141,8 @@ body {
   margin: 0 16px;
 }
 
-.main-nav__item a {
+.main-nav__item a,
+.mobile-nav__item a {
   text-decoration: none;
   color: #0e4f1f;
   font-weight: bold;
@@ -133,7 +156,8 @@ body {
   border-bottom: 5px solid white;  
 }
 
-.main-nav__item--cta a {
+.main-nav__item--cta a,
+.mobile-nav__item--cta a {
   color: #fff;
   background: #ff1b68;
   padding: 8px 16px;
@@ -141,10 +165,40 @@ body {
 }
 
 .main-nav__item--cta a:hover,
-.main-nav__item--cta a:active {
+.main-nav__item--cta a:active,
+.mobile-nav__item--cta a:hover,
+.mobile-nav__item--cta a:active {
   color: #ff1b68;
   background: #fff;
   border-bottom: none;
+}
+
+.mobile-nav {
+  display: none;
+  position: fixed;
+  z-index: 101;
+  top: 0;
+  left: 0;
+  background: white;
+  width: 80%;
+  height: 100vh;
+}
+
+.mobile-nav__items {
+  width: 90%;
+  height: 100%;
+  list-style: none;
+  margin: 10% auto;
+  padding: 0;
+  text-align: center;
+}
+
+.mobile-nav__item {
+  margin: 1rem 0;
+}
+
+.mobile-nav__item a {
+  font-size: 1.5rem;
 }
 
 .main-footer {
