--- a/main.css
+++ b/main.css
@@ -1,17 +1,9 @@
 #product-overview {
-  background: linear-gradient(to top, rgba(80, 68, 18, .6) 10%, transparent), url('img/freedom.jpg') left 20% top 20% / cover no-repeat border-box, #ff1b68;
-  /* background-image: linear-gradient(180deg, red 60%, blue 68%, yellowgreen 68%); */
-  /* background-image: radial-gradient(ellipse farthest-side at 20% 50%, red, blue, yellowgreen); */
+  background: linear-gradient(to top, rgba(80, 68, 18, .6) 10%, transparent), url('img/freedom.jpg') center / cover no-repeat border-box, #ff1b68;
   width: 100vw;
-  height: 44vh;
-  padding: 0.625rem;
+  height: 33vh;
   position: relative;
-  margin-top: 2.6875rem;
-}
-
-.section-title {
-  color: #2ddf5c;
-  text-align: center;
+  margin-top: 3.75rem;
 }
 
 #product-overview h1 {
@@ -20,6 +12,22 @@
   position: absolute;
   left: 5%;
   bottom: 3%;
+  font-size: 1.6rem;
+}
+
+@media (min-width: 40rem) {
+  #product-overview {
+    height: 40vh;
+    background-position: 50% 25%;
+  }
+  #product-overview h1 {
+    font-size: 3rem;
+  }
+}
+
+.section-title {
+  color: #2ddf5c;
+  text-align: center;
 }
 
 .plan-list {
