Added media queries for the plans and features sections.

--- a/main.css
+++ b/main.css
@@ -30,26 +30,17 @@
   text-align: center;
 }
 
-.plan-list {
-  width: 80%;
-  margin: auto;
-  text-align: center;
-}
-
 .plan {
   background: #dfffdc;
   text-align: center;
   padding: 1rem;
-  margin: 0.5rem;
-  display: inline-block;
-  width: 30%;
-  vertical-align: middle;
+  margin: 0.5rem 0;
+  width: 100%;
 }
 
 .plan--highlighted {
   background: #19b84c;
   color: #fff;
-  box-shadow: 2px 2px 2px 1px rgba(0,0,0,.2);
 }
 
 .plan__annotation {
@@ -86,6 +77,24 @@
   color: #0e4f1f;
 }
 
+@media (min-width: 40rem) {
+  .plan-list {
+    width: 100%;
+    text-align: center;
+  }
+  .plan {
+    display: inline-block;
+    width: 30%;
+    min-width: 13rem;
+    max-width: 25rem;
+    vertical-align: middle;
+    /* margin: 0.5rem; */
+  }
+  .plan--highlighted {
+    box-shadow: 2px 2px 2px 1px rgba(0,0,0,.2);
+  }
+}
+
 #key-features {
   background: #ff1b68;
   margin-top: 5rem;
@@ -104,12 +113,6 @@
   text-align: center;
 }
 
-.key-feature {
-  display: inline-block;
-  width: 30%;
-  vertical-align: top;
-}
-
 .key-feature__image {
   background: #ffcede;
   width: 8rem;
@@ -125,6 +128,15 @@
   font-weight: bold;
   color: #fff;
   font-size: 1.25rem;
+}
+
+@media (min-width: 40rem) {
+  .key-feature {
+    display: inline-block;
+    width: 30%;
+    max-width: 25rem;
+    vertical-align: top;
+  }
 }
 
 .modal {
