--- a/shared.css
+++ b/shared.css
@@ -152,7 +152,7 @@ body {
 .main-footer {
   background: #000;
   padding: 32px;
-  margin-top: 48px;
+  /* margin-top: 48px; */
 }
 
 .main-footer__links {
