--- a/customers/customers.css
+++ b/customers/customers.css
@@ -1,14 +1,9 @@
-.testimonial {
-  font-size: 1.2rem;
+main {
+  padding-top: 2rem;
 }
 
-/* .testimonial__list {
-  width: 80%;
-  margin: auto;
-} */
-
-.testimonial:first-of-type {
-  margin-top: 6rem;
+.testimonial {
+  font-size: 1.2rem;
 }
 
 .testimonial__image-container {
