--- a/packages/packages.css
+++ b/packages/packages.css
@@ -88,7 +88,8 @@ main {
 
 @media (min-width: 40rem) {
   main {
-    margin: 3rem auto;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 1500px;
   }
 }
