--- a/shared.css
+++ b/shared.css
@@ -7,6 +7,11 @@ body {
   margin: 0;
 }
 
+main {
+  margin-top: 3.5rem;
+  min-height: calc(100vh - 3.5rem - 8rem);
+}
+
 .backdrop {
   position: fixed;
   display: none;
@@ -60,15 +65,13 @@ body {
   text-decoration: none;
   font-weight: 700;
   color: #0e4f1f;
-  font-size: 22px;
-  width: 23px;
+  height: 2.5rem;
   display: inline-block;
   vertical-align: middle;
 }
 
 .main-header__brand img {
-  height: 2.5rem;
-  /* width: 100%; */
+  height: 100%;
 }
 
 .main-nav {
