--- a/start-hosting/start-hosting.css
+++ b/start-hosting/start-hosting.css
@@ -29,11 +29,55 @@ main {
 .signup-form input[id*="terms"] + label {
   display: inline-block;
   width: auto;
+  vertical-align: bottom;
+}
+
+.signup-form input:not([type="checkbox"]),
+.signup-form select {
+  border: 1px solid #ccc;
+  padding: 0.2rem 0.5rem;
+  font: inherit;
+}
+
+.signup-form input:focus,
+.signup-form select:focus {
+  outline: none;
+  background: #d8f3df; 
+  border-color: #2ddf5c;
+}
+
+.signup-form input[type="checkbox"] {
+  border: 1px solid #ccc;
+  background: #fff;
+  width: 1rem;
+  height: 1rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.signup-form input[type="checkbox"]:checked {
+  background: #2ddf5c;
+  border-color: #0e4f1f;
+}
+
+.signup-form input.invalid,
+.signup-form select.invalid,
+.signup-form :invalid {
+  border-color: red !important;
+  background: #faacac;
 }
 
 .signup-form button[type="submit"] {
   display: block;
   margin-top: 1rem;
+}
+
+.button[disabled] {
+  cursor: not-allowed;
+  border: #a1a1a1;
+  background: #ccc;
+  color: #a1a1a1;
 }
 
 @media (min-width: 40rem) {
