--- a/shared.css
+++ b/shared.css
@@ -36,11 +36,9 @@ main {
   padding: 0.5rem 1rem;
   z-index: 1;
   top: 0;
-}
-
-.main-header > div {
-  display: inline-block;
-  vertical-align: middle;  
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .toggle-button {
@@ -69,13 +67,11 @@ main {
   text-decoration: none;
   font-weight: 700;
   color: #0e4f1f;
-  height: 2.5rem;
-  display: inline-block;
-  vertical-align: middle;
 }
 
 .main-header__brand img {
-  height: 100%;
+  height: 2.5rem;
+  vertical-align: middle;  
 }
 
 .main-nav {
@@ -86,10 +82,10 @@ main {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
 }
 
 .main-nav__item {
-  display: inline-block;
   margin: 0 16px;
 }
 
@@ -98,10 +94,7 @@ main {
     display: none;
   }
   .main-nav {
-    display: inline-block;
-    text-align: right;
-    width: calc(100% - 44px);
-    vertical-align: middle;
+    display: flex;
   }
 }
 
@@ -152,9 +145,12 @@ main {
   width: 90%;
   height: 100%;
   list-style: none;
-  margin: 10% auto;
+  margin: 0 auto;
   padding: 0;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .mobile-nav__item {
