--- a/shared.css
+++ b/shared.css
@@ -196,12 +196,13 @@ main {
   list-style: none;
   margin: 0;
   padding: 0;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main-footer__link {
-  margin: 1rem 0;
-  display: block;
+  margin: 0.5rem 0;
 }
 
 .main-footer__link a {
@@ -215,8 +216,11 @@ main {
 }
 
 @media (min-width: 40rem) {
+  .main-footer__links {
+    flex-direction: row;
+    justify-content: center;
+  }
   .main-footer__link {
-    display: inline-block;    
     margin: 0 1rem;
   }
 }
