--- a/css-grid/main.css
+++ b/css-grid/main.css
@@ -9,17 +9,18 @@
   display: grid;
   height: 500px;  
   /* grid-template-columns: 200px 5rem 20% auto; */
-  grid-template-columns: repeat(4, 25%);  
-  grid-template-rows: [row-1-start] 5rem [row-1-end row-2-start] minmax(10px, auto) [row-2-end row-3-start] 100px [row-3-end];
+  grid-template-columns: [hd-start] repeat(4, [col-start] 25% [col-end]) [hd-end];  
+  grid-template-rows: [hd-start] 5rem [hd-end row-2-start] minmax(10px, auto) [row-2-end row-3-start] 100px [row-3-end];
   grid-gap: 10px;
   grid-template-areas: "header header header header"
-                       "side   main   main   main"
+                       "side   .   main   main"
                        "footer footer footer footer"
 }
 
 .el1 {
   background: rgba(255, 154, 72, 0.5);
-  grid-area: side;
+  /* grid-area: side; */
+  grid-column: col-start 2 / col-end 2;
 }
 
 .el2 {
@@ -41,7 +42,9 @@
   grid-row-start: row-1-start;
   grid-row-end: row-2-end; */
   /* grid-area: row-1-start / 2 / row-2-end / span 3; */
-  grid-area: header;
+  grid-area: hd;
+  /* grid-column: hd;
+  grid-row: hd; */
 }
 
 .el4 {
