--- a/shared.css
+++ b/shared.css
@@ -6,14 +6,23 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  height: 100%;
   font-family: 'Montserrat', sans-serif;
   margin: 0;
+  display: grid;
+  grid-template-rows: 3.5rem auto fit-content(8rem);
+  grid-template-areas: "header"
+                       "main"
+                       "footer";
 }
 
 main {
-  margin-top: 3.5rem;
-  min-height: calc(100vh - 3.5rem - 8rem);
+  grid-area: main;
 }
 
 .backdrop {
@@ -190,6 +199,7 @@ main {
   background: #000;
   padding: 32px;
   margin-top: 48px;
+  grid-area: footer;
 }
 
 .main-footer__links {
