--- a/css-grid/main.css
+++ b/css-grid/main.css
@@ -7,20 +7,36 @@
 .container {
   margin: 20px;
   display: grid;
-  height: 500px;  
+  height: 800px;
   /* grid-template-columns: 200px 5rem 20% auto; */
-  grid-template-columns: [hd-start] repeat(4, [col-start] 25% [col-end]) [hd-end];  
-  grid-template-rows: [hd-start] 5rem [hd-end row-2-start] minmax(10px, auto) [row-2-end row-3-start] 100px [row-3-end];
+  grid-template-columns: [hd-start] repeat(4, [col-start] 20% [col-end]) [hd-end];  
+  grid-template-rows: [hd-start] 5rem [hd-end row-2-start] minmax(10px, 20rem) [row-2-end row-3-start] 100px [row-3-end];
   grid-gap: 10px;
   grid-template-areas: "header header header header"
-                       "side   .   main   main"
-                       "footer footer footer footer"
+                       ".      side   main   main"
+                       "footer footer footer footer";
+  /* justify-items: center; */
+  /* align-items: center; */
+  /* justify-content: center;
+  align-content: center; */
+}
+
+@media (max-width: 40rem) {
+  .container {
+    grid-template-columns: [hd-start] repeat(4, [col-start] 20% [col-end]) [hd-end];  
+    grid-template-rows: [hd-start] 5rem [hd-end row-2-start] minmax(10px, 20rem) [row-2-end row-3-start] 150px [row-3-end row-4-start] 100px [row-4-end];
+
+    grid-template-areas: "header header header header"
+                          "main   main   main   main"
+                          "side   side   side   side"
+                          "footer footer footer footer";
+  }
 }
 
 .el1 {
   background: rgba(255, 154, 72, 0.5);
-  /* grid-area: side; */
-  grid-column: col-start 2 / col-end 2;
+  grid-area: side;
+  /* grid-column: col-start 2 / col-end 2; */
 }
 
 .el2 {
@@ -33,6 +49,8 @@
   /* grid-row: row-2-start / span 1; */
   grid-area: main;
   z-index: 10;
+  /* align-self: center;
+  justify-self: center; */
 }
 
 .el3 {
