--- a/customers/customers.css
+++ b/customers/customers.css
@@ -7,14 +7,17 @@ main {
 }
 
 .testimonial__image-container {
-  width: 100%;
+  width: 70%;
   max-width: 40rem;
   box-shadow: 3px 3px 10px 3px rgba(0,0,0,.2);
+  transform: skew(20deg);
+  overflow: hidden;
 }
 
 .testimonial__image {
   width: 100%;
   vertical-align: text-top;
+  transform: skew(-20deg) scale(1.25);
 }
 
 .testimonial__info {
