--- a/packages/packages.css
+++ b/packages/packages.css
@@ -42,6 +42,7 @@ main {
   border-left: none;
   position: relative;
   /* z-index: 1; */
+  overflow: hidden;
 }
 
 .package:hover,
@@ -61,12 +62,14 @@ main {
   position: absolute;
   top: 0;
   right: 0;
-  margin: 1.25rem;
+  margin: 0;
   font-size: 0.75rem;
   color: #fff;
   background: #ff5454;
   padding: 0.5rem;
-  /* z-index: 10; */
+  transform: rotate(45deg) translate(3.5rem, -1rem);
+  width: 12rem;
+  text-align: center;
 }
 
 .package__subtitle {
