--- a/shared.css
+++ b/shared.css
@@ -28,6 +28,8 @@ main {
 .backdrop {
   position: fixed;
   display: none;
+  opacity: 0;
+  transition: opacity 0.2s linear;
   z-index: 100;
   top: 0;
   left: 0;
@@ -140,14 +142,16 @@ main {
 }
 
 .mobile-nav {
-  display: none;
+  transform: translateX(-100%);
   position: fixed;
   z-index: 101;
   top: 0;
   left: 0;
   background: white;
   width: 80%;
+  transition: transform 0.3s ease-out;
   height: 100vh;
+  overflow: hidden;
 }
 
 .mobile-nav__items {
@@ -193,6 +197,8 @@ main {
 
 .open {
   display: block !important;
+  opacity: 1 !important;
+  transform: translateY(0rem) !important;
 }
 
 .main-footer {
