--- a/shared.css
+++ b/shared.css
@@ -124,6 +124,10 @@ main {
   border-bottom: 5px solid white;  
 }
 
+.main-nav__item--cta {
+  animation: wiggle 400ms 2s 8 ease-out;
+}
+
 .main-nav__item--cta a,
 .mobile-nav__item--cta a {
   color: #fff;
@@ -238,5 +242,17 @@ main {
   }
   .main-footer__link {
     margin: 0 1rem;
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    transform: rotateZ(0);
+  }
+  50% {
+    transform: rotateZ(-10deg);    
+  }
+  100% {
+    transform: rotateZ(10deg);
   }
 }
