--- a/shared.css
+++ b/shared.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css?family=Anton');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
+:root {
+  --dark-green: #0e4f1f;
+  --highlight-color: #ff1b68;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -131,7 +136,7 @@ main {
 .main-nav__item--cta a,
 .mobile-nav__item--cta a {
   color: #fff;
-  background: #ff1b68;
+  background: var(--highlight-color);
   padding: 8px 16px;
   border-radius: 8px;
 }
@@ -140,7 +145,7 @@ main {
 .main-nav__item--cta a:active,
 .mobile-nav__item--cta a:hover,
 .mobile-nav__item--cta a:active {
-  color: #ff1b68;
+  color: var(--highlight-color);
   background: #fff;
   border-bottom: none;
 }
@@ -179,11 +184,11 @@ main {
 }
 
 .button {
-  background: #0e4f1f;
+  background: var(--dark-green);
   color: #fff;
   padding: 8px;
   font: inherit;
-  border: 1.5px solid #0e4f1f;
+  border: 1.5px solid var(--dark-green);
   border-radius: 5px;
   font-weight: bold;
   cursor: pointer;
