--- a/shared.css
+++ b/shared.css
@@ -52,6 +52,9 @@ main {
   padding: 0.5rem 1rem;
   z-index: 60;
   top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   align-items: center;
   justify-content: space-between;
