--- a/shared.css
+++ b/shared.css
@@ -16,14 +16,21 @@ html {
 }
 
 body {
-  height: 100%;
   font-family: 'Montserrat', sans-serif;
   margin: 0;
-  display: grid;
-  grid-template-rows: 3.5rem auto fit-content(8rem);
-  grid-template-areas: "header"
-                       "main"
-                       "footer";
+  padding-top: 3.5rem;
+}
+
+@supports (display: grid) {
+  body {
+    height: 100%;
+    padding-top: 0;    
+    display: grid;
+    grid-template-rows: 3.5rem auto fit-content(8rem);
+    grid-template-areas: "header"
+                         "main"
+                         "footer";
+  }
 }
 
 main {
